--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -278,6 +278,7 @@
       <DependentUpon>Northwind.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CustomersOrdersOrderDetailsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Northwind.ldf" />
@@ -335,6 +336,7 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Customers\Edit.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\CustReport.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
